// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`level constructor data 1`] = `
Object {
  "cells": Array [
    " ∩&",
    "o@▢",
  ],
  "demo": null,
  "height": 2,
  "infotronsNeed": 42,
  "initialFreezeZonks": true,
  "initialGravity": true,
  "maxTitleLength": 23,
  "resizable": Object {
    "maxHeight": 32767,
    "maxWidth": 32767,
  },
  "specialPorts": Array [
    Object {
      "setsFreezeEnemies": true,
      "setsFreezeZonks": true,
      "setsGravity": true,
      "x": 1,
      "y": 0,
    },
  ],
  "title": "-- Lorem ipsum --      ",
  "width": 3,
}
`;

exports[`level resize simple 1`] = `
Object {
  "cells": Array [
    " ∩&  ",
    "o@▢  ",
    "     ",
    "     ",
  ],
  "demo": null,
  "height": 4,
  "infotronsNeed": 42,
  "initialFreezeZonks": true,
  "initialGravity": true,
  "maxTitleLength": 23,
  "resizable": Object {
    "maxHeight": 32767,
    "maxWidth": 32767,
  },
  "specialPorts": Array [
    Object {
      "setsFreezeEnemies": true,
      "setsFreezeZonks": true,
      "setsGravity": true,
      "x": 1,
      "y": 0,
    },
  ],
  "title": "-- Lorem ipsum --      ",
  "width": 5,
}
`;

exports[`level resize simple 2`] = `
Object {
  "cells": Array [
    " ∩&&⊃",
    "o@▢  ",
    "o    ",
    "∪    ",
  ],
  "demo": null,
  "height": 4,
  "infotronsNeed": 42,
  "initialFreezeZonks": true,
  "initialGravity": true,
  "maxTitleLength": 23,
  "resizable": Object {
    "maxHeight": 32767,
    "maxWidth": 32767,
  },
  "specialPorts": Array [
    Object {
      "setsFreezeEnemies": true,
      "setsFreezeZonks": true,
      "setsGravity": true,
      "x": 1,
      "y": 0,
    },
    Object {
      "setsFreezeEnemies": true,
      "setsFreezeZonks": false,
      "setsGravity": true,
      "x": 4,
      "y": 0,
    },
    Object {
      "setsFreezeEnemies": true,
      "setsFreezeZonks": true,
      "setsGravity": false,
      "x": 0,
      "y": 3,
    },
  ],
  "title": "-- Lorem ipsum --      ",
  "width": 5,
}
`;
